Added changes for user name