@@ -11,7 +11,7 @@ import com.aas.mw.config.ErpSetupProperties;
 import com.aas.mw.config.RoleResolver;
 import com.aas.mw.dto.AuthRequest;
 import com.aas.mw.dto.AuthResponse;
-import java.util.Collections;
+import java.util.Map;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -22,6 +22,7 @@ class AuthenticationServiceTest {
     private ErpNextClient erpNextClient;
     private JwtService jwtService;
     private ErpSessionStore erpSessionStore;
+    private UserAliasService userAliasService;
     private AuthenticationService service;
 
     @BeforeEach
@@ -29,6 +30,7 @@ class AuthenticationServiceTest {
         erpNextClient = mock(ErpNextClient.class);
         jwtService = mock(JwtService.class);
         erpSessionStore = mock(ErpSessionStore.class);
+        userAliasService = mock(UserAliasService.class);
         ErpSetupProperties erpSetupProperties = new ErpSetupProperties();
         erpSetupProperties.setFullName("Administrator");
         erpSetupProperties.setPassword("admin");
@@ -37,37 +39,19 @@ class AuthenticationServiceTest {
                 jwtService,
                 erpSessionStore,
                 new RoleResolver("Administrator", "Supplier", "Customer", "Stock User"),
+                userAliasService,
                 erpSetupProperties);
     }
 
     @Test
-    void fallsBackToPrivilegedRoleLookupWhenSelfLookupIsEmpty() {
+    void logsInUsingAuthenticatedUserSession() {
         AuthRequest request = new AuthRequest();
         request.setUsername("helper@example.com");
         request.setPassword("helper123");
 
+        when(userAliasService.resolveLoginId("helper@example.com")).thenReturn("helper@example.com");
         when(erpNextClient.login("helper@example.com", "helper123")).thenReturn("sid=user");
-        when(erpNextClient.getUserRoles("sid=user", "helper@example.com")).thenReturn(Collections.emptyList());
-        when(erpNextClient.login("Administrator", "admin")).thenReturn("sid=admin");
-        when(erpNextClient.getUserRoles("sid=admin", "helper@example.com")).thenReturn(List.of("Stock User"));
-        when(jwtService.generateToken("helper@example.com", AppRole.HELPER)).thenReturn("jwt");
-
-        AuthResponse response = service.login(request);
-
-        assertEquals("jwt", response.getAccessToken());
-        assertEquals("helper", response.getRole());
-    }
-
-    @Test
-    void resolvesUsernameAliasBeforeErpLogin() {
-        AuthRequest request = new AuthRequest();
-        request.setUsername("Tapan");
-        request.setPassword("tapan@123");
-
-        when(erpNextClient.login("Administrator", "admin")).thenReturn("sid=admin");
-        when(erpNextClient.resolveUserId("sid=admin", "Tapan")).thenReturn("helper@example.com");
-        when(erpNextClient.login("helper@example.com", "tapan@123")).thenReturn("sid=user");
-        when(erpNextClient.resolveUserId("sid=user", "helper@example.com")).thenReturn("helper@example.com");
+        when(erpNextClient.getLoggedInUser("sid=user")).thenReturn("helper@example.com");
         when(erpNextClient.getUserRoles("sid=user", "helper@example.com")).thenReturn(List.of("Stock User"));
         when(jwtService.generateToken("helper@example.com", AppRole.HELPER)).thenReturn("jwt");
 
@@ -78,18 +62,72 @@ class AuthenticationServiceTest {
     }
 
     @Test
-    void rejectsLoginWhenNoSupportedRoleExistsEvenAfterFallback() {
+    void rejectsAliasWhenErpDoesNotAuthenticateThatIdentifier() {
+        AuthRequest request = new AuthRequest();
+        request.setUsername("Tapan");
+        request.setPassword("tapan@123");
+
+        when(userAliasService.resolveLoginId("Tapan")).thenReturn("Tapan");
+        when(erpNextClient.login("Tapan", "tapan@123")).thenReturn(null);
+
+        ResponseStatusException exception = assertThrows(ResponseStatusException.class, () -> service.login(request));
+
+        assertEquals(401, exception.getStatusCode().value());
+    }
+
+    @Test
+    void rejectsLoginWhenNoSupportedRoleExists() {
         AuthRequest request = new AuthRequest();
         request.setUsername("helper@example.com");
         request.setPassword("helper123");
 
+        when(userAliasService.resolveLoginId("helper@example.com")).thenReturn("helper@example.com");
         when(erpNextClient.login("helper@example.com", "helper123")).thenReturn("sid=user");
-        when(erpNextClient.getUserRoles("sid=user", "helper@example.com")).thenReturn(Collections.emptyList());
-        when(erpNextClient.login("Administrator", "admin")).thenReturn("sid=admin");
-        when(erpNextClient.getUserRoles("sid=admin", "helper@example.com")).thenReturn(Collections.emptyList());
+        when(erpNextClient.getLoggedInUser("sid=user")).thenReturn("helper@example.com");
+        when(erpNextClient.getUserRoles("sid=user", "helper@example.com")).thenReturn(List.of());
 
         ResponseStatusException exception = assertThrows(ResponseStatusException.class, () -> service.login(request));
 
         assertEquals(403, exception.getStatusCode().value());
+    }
+
+    @Test
+    void infersHelperRoleFromUserProfileWhenErpHidesRoleRows() {
+        AuthRequest request = new AuthRequest();
+        request.setUsername("helper@example.com");
+        request.setPassword("helper123");
+
+        when(userAliasService.resolveLoginId("helper@example.com")).thenReturn("helper@example.com");
+        when(erpNextClient.login("helper@example.com", "helper123")).thenReturn("sid=user");
+        when(erpNextClient.getLoggedInUser("sid=user")).thenReturn("helper@example.com");
+        when(erpNextClient.getUserRoles("sid=user", "helper@example.com")).thenReturn(List.of());
+        when(erpNextClient.getResourceWithSession("User", "helper@example.com", "sid=user"))
+                .thenReturn(Map.of("data", Map.of(
+                        UserFeatureService.FEATURE_ALLOW_FIELD, "[\"orders.view\"]",
+                        UserFeatureService.FEATURE_DENY_FIELD, "[\"company_settings.view\"]")));
+        when(jwtService.generateToken("helper@example.com", AppRole.HELPER)).thenReturn("jwt");
+
+        AuthResponse response = service.login(request);
+
+        assertEquals("jwt", response.getAccessToken());
+        assertEquals("helper", response.getRole());
+    }
+
+    @Test
+    void logsInUsingGenericAliasMappedToErpUser() {
+        AuthRequest request = new AuthRequest();
+        request.setUsername("Tapan");
+        request.setPassword("tapan@123");
+
+        when(userAliasService.resolveLoginId("Tapan")).thenReturn("helper@example.com");
+        when(erpNextClient.login("helper@example.com", "tapan@123")).thenReturn("sid=user");
+        when(erpNextClient.getLoggedInUser("sid=user")).thenReturn("helper@example.com");
+        when(erpNextClient.getUserRoles("sid=user", "helper@example.com")).thenReturn(List.of("Stock User"));
+        when(jwtService.generateToken("helper@example.com", AppRole.HELPER)).thenReturn("jwt");
+
+        AuthResponse response = service.login(request);
+
+        assertEquals("jwt", response.getAccessToken());
+        assertEquals("helper", response.getRole());
     }
 }
